--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,5 +12,6 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: '^1.19.5'
+      - uses: pre-commit/action@v3.0.0
       - name: Test Go
         run: 'go test ./... -count=1'
