feat(parser): parse boolean literal

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,8 +2,11 @@ repos:
 - repo: https://github.com/tekwizely/pre-commit-golang
   rev: v1.0.0-rc.1
   hooks:
+    - id: go-mod-tidy-repo
+      verbose: true
     - id: go-fmt
       args: [-w]
       verbose: true
-    - id: go-test-mod
+    - id: go-test-repo-mod
+      args: [--count=1]
       verbose: true
